--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,7 +4,7 @@ $background-light: #9575CD;
 $background-pale: #D1C4E9;
 
 @mixin zero-margin($pad-up-down, $pad-left-right) {
-  margin: 0px auto;
+  margin: 0 auto;
   padding: $pad-up-down $pad-left-right;
 }
 
