--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -17,6 +17,7 @@
       <md-card-content>
         <p>{{ dish.description }}</p>
         <md-card-actions>
+          <button md-button (click)="goBack()">Back</button>
           <button md-button>LIKE</button>
           <button md-button>SHARE</button>
         </md-card-actions>
