--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -43,17 +43,45 @@
     </p>
     <form novalidate [formGroup]="feedbackForm" (ngSubmit)="onSubmit()">
       <p>
-        <md-input-container class="half-width">
+        <md-input-container class="half-width" dividerColor="{{(feedbackForm.get('firstname').hasError('required') &&
+          feedbackForm.get('firstname').dirty) ? 'warn' : 'primary'}}">
           <input mdInput formControlName="firstname" placeholder="First Name" type="text" required>
+          <md-hint>
+            <span
+              [hidden]="!(feedbackForm.get('firstname').hasError('required') && feedbackForm.get('firstname').dirty)">
+              First name is required
+            </span>
+          </md-hint>
         </md-input-container>
-        <md-input-container class="half-width">
+        <md-input-container class="half-width" dividerColor="{{(feedbackForm.get('lastname').hasError('required') &&
+          feedbackForm.get('lastname').dirty) ? 'warn' : 'primary'}}">
           <input mdInput formControlName="lastname" placeholder="Last Name" type="text" required>
+          <md-hint>
+            <span
+              [hidden]="!(feedbackForm.get('lastname').hasError('required') && feedbackForm.get('lastname').dirty)">
+              Last name is required
+            </span>
+          </md-hint>
         </md-input-container>
-        <md-input-container class="half-width">
+        <md-input-container class="half-width" dividerColor="{{(feedbackForm.get('lastname').hasError('required') &&
+          feedbackForm.get('lastname').dirty) ? 'warn' : 'primary'}}">
           <input mdInput formControlName="telnum" placeholder="Telephone Number" type="tel" required>
+          <md-hint>
+            <span
+              [hidden]="!(feedbackForm.get('telnum').hasError('required') && feedbackForm.get('telnum').dirty)">
+              Telephone number is required
+            </span>
+          </md-hint>
         </md-input-container>
-        <md-input-container class="half-width">
+        <md-input-container class="half-width" dividerColor="{{(feedbackForm.get('email').hasError('required') &&
+          feedbackForm.get('email').dirty) ? 'warn' : 'primary'}}">
           <input mdInput formControlName="email" placeholder="Email" type="email" required>
+          <md-hint>
+            <span
+              [hidden]="!(feedbackForm.get('email').hasError('required') && feedbackForm.get('email').dirty)">
+              Email is required
+            </span>
+          </md-hint>
         </md-input-container>
       </p>
       <table class="form-size">
@@ -73,7 +101,9 @@
           <textarea mdInput formControlName="message" placeholder="Your Feedback" rows="12" required></textarea>
         </md-input-container>
       </p>
-      <button type="submit" md-button class="background-primary text-floral-white">Submit</button>
+      <button type="submit" md-button class="background-primary text-floral-white" [disabled]="feedbackForm.valid">
+        Submit
+      </button>
     </form>
   </div>
 </div>
