--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -19,6 +19,11 @@
     </md-card-content>
   </md-card>
 
+  <div [hidden]="dish">
+    <md-spinner></md-spinner>
+    <h4>Loading ... Please Wait</h4>
+  </div>
+
   <md-card *ngIf="promotion" fxFlex>
     <md-card-header>
       <div md-card-avatar></div>
@@ -33,6 +38,11 @@
     </md-card-content>
   </md-card>
 
+  <div [hidden]="promotion">
+    <md-spinner></md-spinner>
+    <h4>Loading ... Please Wait</h4>
+  </div>
+
   <md-card *ngIf="leader" fxFlex>
     <md-card-header>
       <div md-card-avatar></div>
@@ -46,5 +56,10 @@
       </p>
     </md-card-content>
   </md-card>
+
+  <div [hidden]="leader">
+    <md-spinner></md-spinner>
+    <h4>Loading ... Please Wait</h4>
+  </div>
 
 </div>
