--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -17,16 +17,23 @@
       <md-card-content>
         <p>{{ dish.description }}</p>
         <md-card-actions>
+          <button md-button [routerLink]="['/dishdetail', prev]">
+            <span class="fa fa-chevron-left fa-lg"></span>
+          </button>
           <button md-button (click)="goBack()">Back</button>
           <button md-button>LIKE</button>
           <button md-button>SHARE</button>
+          <span class="flex-spacer"></span>
+          <button md-button [routerLink]="['/dishdetail', next]">
+            <span class="fa fa-chevron-right fa-lg"></span>
+          </button>
         </md-card-actions>
       </md-card-content>
     </md-card>
   </div>
 
-  <div fxFlex="40">
-    <md-list *ngIf="dish">
+  <div fxFlex="40" *ngIf="dish">
+    <md-list>
       <h3>Comments</h3>
       <md-list-item *ngFor="let comment of dish.comments">
         <h4 md-line>{{ comment.comment }}</h4>
