--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -42,7 +42,47 @@
           <span>-- {{ comment.author }} {{ comment.date | date }}</span>
         </p>
       </md-list-item>
+      <md-list-item *ngIf="commentForm.valid">
+        <h4 md-line>{{commentForm.get('comment').value}}</h4>
+        <p md-line>{{commentForm.get('rating').value}} Stars</p>
+        <p md-line>
+          <span>-- {{commentForm.get('author').value}}</span>
+        </p>
+      </md-list-item>
     </md-list>
+
+    <h3>Submit Your Comments</h3>
+    <!--<p>
+      {{commentForm.value | json}} {{commentForm.status | json}}
+    </p>-->
+    <form novalidate [formGroup]="commentForm" (ngSubmit)="onSubmit()">
+      <p>
+        <md-input-container dividerColor="{{formErrors.author ? 'warn' : 'primary'}}">
+          <input mdInput formControlName="author" placeholder="Name" type="text" required>
+          <md-hint>
+            <span
+              [hidden]="!(formErrors.author)">
+              {{formErrors.author}}
+            </span>
+          </md-hint>
+        </md-input-container>
+      </p>
+      <md-slider formControlName="rating" tickInterval="1" thumbLabel step="1" min="1" max="5"></md-slider>
+      <p>
+        <md-input-container class="full-width" dividerColor="{{formErrors.comment ? 'warn' : 'primary'}}">
+          <textarea mdInput formControlName="comment" placeholder="Your Comment" rows="12" required></textarea>
+          <md-hint>
+            <span
+              [hidden]="!(formErrors.comment)">
+              {{formErrors.comment}}
+            </span>
+          </md-hint>
+        </md-input-container>
+      </p>
+      <button type="submit" md-button class="background-primary text-floral-white" [disabled]="commentForm.invalid">
+        Submit
+      </button>
+    </form>
   </div>
 
   <div [hidden]="dish">
